--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="padding: 100px">
 <div style="width: 1000px">
-    <p style="font-size: 20px; display: inline"> Please say heights out loud at the pace indicated by the circle below </p>
+    <p style="font-size: 20px; display: inline"> Please say the amount of money out loud at the pace indicated by the circle below </p>
     <canvas id="canvas" style="border: 1px solid black" width="1000px"; height="400px";></canvas>
     <button id="startBtn" onclick="startExp()">Start</button>
 </div>
