--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="padding: 100px">
 <div style="width: 1000px">
-    <p style="font-size: 20px; display: inline"> Please say the probable numbers/outcomes out loud at the pace indicated by the circle below. You can exist by pressing 'Esc'. </p>
+    <p style="font-size: 20px; display: inline"> Please say the probable numbers/outcomes out loud at the pace indicated by the circle below. You can exit by pressing 'Esc'. </p>
     <canvas id="canvas" style="border: 1px solid black" width="1000px"; height="400px";></canvas>
     <button id="startBtn" onclick="startExp()">Start</button>
 </div>
